--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    테스트
+    <!-- <ol>
+        <li><a href="./watermelonGame.html">수박게임</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ol> -->
+    <script src="./matter.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
